<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".ProfileActivity">


    <ImageView
        android:id="@+id/foto"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ilham"
        android:scaleType="centerCrop"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/gambar_film"
        />


    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:text="@string/ilham_maulana"
        android:layout_below="@id/foto"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:id="@+id/data_diri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/nama"
        android:maxLines="3"
        android:layout_centerHorizontal="true"
        android:text="@string/diri"/>




</RelativeLayout>