<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".detail.DetailMoviesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/hello"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/judul"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fall"
            android:textColor="@color/black"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:maxLines="10"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textColor="@color/black"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/bahasa"
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/kode_bahasa"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/release"
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/waktu"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/popularitas"
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/popularity"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>