<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@drawable/hello"
                android:scaleType="centerCrop"
                android:contentDescription="@string/gambar_film"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/red"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/judul"
                    android:textColor="@color/white"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    />
                <TextView
                    android:id="@+id/popularitas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:text="@string/popularitas"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/rilis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:text="@string/tanggal_rilis"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="@color/white"
                    />

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>